# dialogflow-fulfillment

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  default.nix  dialog-flow.cabal  dialog-flow.nix  dialogflow-fulfillment.cabal  dialogflow-fulfillment.nix  dialogflow.cabal  dialogflow.nix  shell.nix
files/message/: basic_card_button.json  basic_card_image.json  basic_card_with_image.json  basic_card_with_text.json  card_button.json  card_image.json  carousel_select.json  image.json  item.json  link_out_suggestion.json  list_select.json  open_uri_action.json  quick_replies.json  selected_item_info.json  simple_response_ssml.json  simple_response_text.json  simple_responses.json  ssml.json  suggestion.json  suggestions.json  text.json  text_to_speech.json
files/payload/google/: android_app.json  basic_card.json  basic_card_formatted_text.json  basic_card_image.json  image.json  image_display_option_cropped.json  image_display_option_default.json  image_display_option_white.json  link_out_suggestion.json  media_object.json  media_response.json  media_type_audio.json  media_type_unspecified.json  open_url_action.json  simple_response.json  suggestion.json  url_type_hint_amp_content.json  url_type_hint_unspecified.json  version_filter.json
files/request/: context.json  intent.json  query_result.json  webhook_request.json
files/response/: event_input.json
src/DialogFlow/: Message.hs  NewMessage.hs  OtherTypes.hs  Request.hs  Response.hs  Util.hs
src/DialogFlow/Payload/: Google.hs
src/DialogFlow/Payload/Google/: OtherTypes.hs  Response.hs
src/Dialogflow/: Message.hs  Request.hs  Response.hs  Util.hs
src/Dialogflow/Payload/: Google.hs
src/Dialogflow/V2/: Message.hs  Request.hs  Response.hs
src/Dialogflow/V2/Fulfillment/: Message.hs
src/Dialogflow/V2/Fulfillment/Payload/: Google.hs
src/Dialogflow/V2/Fulfillment/Webhook/: Request.hs  Response.hs
src/Dialogflow/V2/Payload/: Google.hs
test/: TestUtil.hs
test/DialogFlow/: MessageSpec.hs  RequestSpec.hs  ResponseSpec.hs
test/Dialogflow/: MessageSpec.hs  RequestSpec.hs  ResponseSpec.hs
test/Dialogflow/Payload/: GoogleSpec.hs
test/Dialogflow/V2/: MessageSpec.hs  RequestSpec.hs  ResponseSpec.hs
test/Dialogflow/V2/Fulfillment/: MessageSpec.hs
test/Dialogflow/V2/Payload/: GoogleSpec.hs
(+3 files in other folders)
