cabal-version:       2.4
name:                dialogflow
version:             0.0.1.0
tested-with:         GHC==8.6.4
category:            API
synopsis:            A Dialogflow library for Haskell.
description:
  A library to create responses for Google's Dialogflow fulfillment webhook.
  .
  Dialogflow is an end-to-end, build-once deploy-everywhere development suite
  for creating conversational interfaces for websites, mobile applications,
  popular messaging platforms, and IoT devices. Find more at the Google Cloud
  <https://cloud.google.com/dialogflow/ site for the project>.
  .
  Check how fulfillment works in the Dialogflow
  <https://cloud.google.com/dialogflow/docs/fulfillment-how documentation>.

homepage:            https://github.com/mauriciofierrom/dialogflow
bug-reports:         https://github.com/mauriciofierrom/dialogflow/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Mauricio Fierro
maintainer:          mauriciofierrom@gmail.com
copyright:           (c) 2019 Mauricio Fierro
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/mauriciofierrom/dialogflow

library
  exposed-modules:
    Dialogflow.V2.Message
    Dialogflow.V2.Payload.Google
    Dialogflow.V2.Request
    Dialogflow.V2.Response
    Dialogflow.Util

  build-depends:
      aeson >= 1.4.2 && < 1.5
    , base ^>=4.12.0.0
    , bytestring >= 0.10.8 && < 0.11
    , containers >= 0.6.0 && < 0.7
    , text >= 1.2.3 && < 1.3
    , unordered-containers >= 0.2.10 && < 0.3

  hs-source-dirs:      src

  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite dialog-flow-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-tools: hspec-discover
  other-modules:
      TestUtil
      Dialogflow.V2.MessageSpec
      Dialogflow.V2.Payload.GoogleSpec
      Dialogflow.V2.RequestSpec
      Dialogflow.V2.ResponseSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , aeson-pretty
    , base ^>=4.12.0.0
    , bytestring
    , containers
    , dialogflow
    , directory
    , hspec
    , hspec-discover
  default-language: Haskell2010
